--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "argv": "0.0.2",
+    "bootstrap": "^3.3.2",
     "cheerio": "*",
     "fs": "*",
     "moment": "^2.9.0",
