--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Brennan Novak",
   "name": "beardo",
-  "description": "A dead simple time track app",
+  "description": "A magical CSV data parsing and outputing wizard",
   "version": "0.1.1",
   "repository": {
     "url": "https://github.com/bnvk/Beardo"
@@ -9,7 +9,9 @@
   "main": "./lib/",
   "keywords": [
     "time tracking",
-    "time management"
+    "time management",
+    "csv",
+    "pdf"
   ],
   "bin": {
     "beardo": "./bin/uppercaseme"
