--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cheerio": "*",
     "es6-promise": "^2.0.1",
     "fs": "*",
-    "inquirer": "0.8.0",
+    "inquirer": "*",
     "moment": "^2.9.0",
     "underscore": "*",
     "wkhtmltopdf": "^0.1.5"
