--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Conjuror",
+  "name": "conjuror",
   "description": "A magical CSV data parsing and outputing wizard or witch",
   "version": "0.1.2",
   "repository": {
