refactored, condensed, consolidated multiple CLIs to run from conjuror command #17

--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "pdf"
   ],
   "bin": {
-    "conjuror": "./bin/conjuror",
-    "ctrack": "./bin/ctrack",
-    "coutput": "./bin/coutput"
+    "conjuror": "./bin/conjuror"
   },
   "author": "Brennan Novak <hi@bnvk.me>",
   "contributors": [
