updated deps and Inquirer to use => syntax and version bump

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "conjuror",
   "description": "A magical CSV data parsing and outputing wizard or witch",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "repository": {
     "url": "https://github.com/bnvk/Conjuror"
   },
@@ -22,25 +22,25 @@
   "dependencies": {
     "argv": "0.0.2",
     "bootstrap": "^3.3.2",
-    "chalk": "^1.1.1",
-    "cheerio": "*",
-    "commander": "^2.9.0",
-    "csv": "^0.4.1",
+    "chalk": "2.3.0",
+    "cheerio": "^1.0.0-rc.2",
+    "commander": "^2.12.0",
+    "csv": "^2.0.0",
     "datapackage-query": "^0.1.6",
     "datapackage-read": "^0.2.2",
-    "es6-promise": "^2.0.1",
-    "fs": "*",
-    "inquirer": "*",
+    "es6-promise": "^4.1.1",
+    "fs": "0.0.1-security",
+    "inquirer": "^4.0.1",
     "mkdir": "0.0.2",
-    "moment": "^2.9.0",
+    "moment": "^2.19.4",
     "underscore": "*",
-    "wkhtmltopdf": "^0.1.5"
+    "wkhtmltopdf": "^0.3.4"
   },
   "engines": {
     "node": "*"
   },
   "devDependencies": {
-    "mocha": "^2.2.5"
+    "mocha": "^4.0.1"
   },
   "bugs": {
     "url": "https://github.com/bnvk/Conjuror/issues"
