--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
   ],
   "dependencies": {
     "argv": "0.0.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "chalk": "2.3.0",
-    "cheerio": "^1.0.0-rc.2",
-    "commander": "^2.15.0",
+    "cheerio": "^1.0.0-rc.3",
+    "commander": "^2.20.0",
     "csv": "^2.0.0",
     "datapackage-query": "^0.1.6",
     "datapackage-read": "^0.2.2",
     "fs": "0.0.1-security",
     "good": "^5.1.2",
     "good-console": "^4.1.0",
-    "hapi": "^8.4.0",
+    "hapi": "^18.1.0",
     "hapi-json-view": "^2.1.0",
     "inquirer": "^4.0.2",
     "mkdir": "0.0.2",
-    "moment": "^2.21.0",
-    "underscore": "*",
+    "moment": "^2.24.0",
+    "underscore": "^1.9.1",
     "wkhtmltopdf": "^0.3.4"
   },
   "devDependencies": {
