--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "conjuror",
   "description": "A magical CSV data parsing and outputing wizard or witch",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "repository": {
     "url": "https://github.com/bnvk/Conjuror"
   },
@@ -22,19 +22,18 @@
     "Simon Vansintjan <svansintjan@gmail.com>"
   ],
   "dependencies": {
+    "@hapi/hapi": "^18.4.0",
     "argv": "0.0.2",
     "bootstrap": "^3.4.1",
     "chalk": "2.3.0",
     "cheerio": "^1.0.0-rc.3",
-    "commander": "^2.20.0",
-    "csv": "^2.0.0",
-    "datapackage-query": "^0.1.6",
+    "commander": "^2.20.3",
+    "csv": "^5.2.0",
+    "datapackage-query": "^0.1.8",
     "datapackage-read": "^0.2.2",
     "fs": "0.0.1-security",
     "good": "^5.1.2",
     "good-console": "^4.1.0",
-    "hapi": "^18.1.0",
-    "hapi-json-view": "^2.1.0",
     "inquirer": "^4.0.2",
     "mkdir": "0.0.2",
     "moment": "^2.24.0",
